# SSAToggle

./: .gitignore  CMakeLists.txt  README.md  SSAColony_R2G_BatchRun.py  SSAColony_Visual_bottom.py  SSA_pop_evolve_finalState_results.csv  SSA_population_evolve.py  SSA_population_transition_rate.py  SSA_single_cell_tau_statistics.py  SSA_single_cell_tracing.py  SSA_single_cell_tracing_generator.py  toggle_SSA.py  tuaDistributionDataFrame.csv
CellMD3D_visulization/: CellMD3D_Visual.py  CellMD3D_bottom_visual.py  CellMD3D_growth.py  CellMD3D_utility.py  example_cell_data.txt  simdata2cc1.py  tempDataVisual.py
Data/: SSA_pop_evolve_results.joblib
Data/single_cell_transition_rate/: cells_tau_lambda1.6_2023-59-21-05-07-59.pkl
SSAColony/: SSAColony_R2G_free_GreenRatio.py  SSAColony_R2G_free_GreenRatio_gr=1.2.py  SSAColony_R2G_free_GreenRatio_gr=1.5.py  __init__.py
discrimination_model/: Gaussian_discrimination_gr-1.6.joblib
src/: SSAToggle.cpp  SSAToggle.h  setup.py  toggle.cpp  toggle.pyd  toggle.pyx
